Terraform/service_iam.tf
# resource "kubernetes_service_account" "lb_controller_sa" {
#   metadata {
#     name      = "aws-load-balancer-controller"
#     namespace = "kube-system"
#     annotations = {
#       "eks.amazonaws.com/role-arn" = module.lb_role.iam_role_arn
#     }
#   }
# }
